; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/backlight/extr_tosa_lcd.c_tosa_lcd_tg_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/backlight/extr_tosa_lcd.c_tosa_lcd_tg_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tosa_lcd_data = type { i32 }

@TOSA_GPIO_TG_ON = common dso_local global i32 0, align 4
@TG_TPOSCTL = common dso_local global i32 0, align 4
@TG_GPOSR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tosa_lcd_data*)* @tosa_lcd_tg_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tosa_lcd_tg_init(%struct.tosa_lcd_data* %0) #0 {
  %2 = alloca %struct.tosa_lcd_data*, align 8
  store %struct.tosa_lcd_data* %0, %struct.tosa_lcd_data** %2, align 8
  %3 = load i32, i32* @TOSA_GPIO_TG_ON, align 4
  %4 = call i32 @gpio_set_value(i32 %3, i32 0)
  %5 = call i32 @mdelay(i32 60)
  %6 = load %struct.tosa_lcd_data*, %struct.tosa_lcd_data** %2, align 8
  %7 = getelementptr inbounds %struct.tosa_lcd_data, %struct.tosa_lcd_data* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @TG_TPOSCTL, align 4
  %10 = call i32 @tosa_tg_send(i32 %8, i32 %9, i32 0)
  %11 = load %struct.tosa_lcd_data*, %struct.tosa_lcd_data** %2, align 8
  %12 = getelementptr inbounds %struct.tosa_lcd_data, %struct.tosa_lcd_data* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @TG_GPOSR, align 4
  %15 = call i32 @tosa_tg_send(i32 %13, i32 %14, i32 2)
  ret void
}

declare dso_local i32 @gpio_set_value(i32, i32) #1

declare dso_local i32 @mdelay(i32) #1

declare dso_local i32 @tosa_tg_send(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
